<resources>
    <string name="app_name">BICI UD</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <!-- editar en navgraph -->
    <string name="login">LOGIN</string>
    <string name="registrarse">Registrarse</string>

    <string name="iniiciarSesion">iniiciar Sesión</string>
    <string name="olvidoContrasena">¿Olvido su contraseña?</string>
    <string name="email">person@correo.udistrital.edu.co</string>
    <string name="verRegistros">Ver Registros</string>
    <string name="verRegistrosCupos">Ver registros de cupos en uso</string>
    <string name="AsignarCupo">AsignarCupo</string>
    <string name="DesAsignarCupo">DesAsignar Cupo</string>
    <string name="CerrarSesion">Cerrar Sesion</string>

    <string-array name="seccion">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="col1">Name</string>
    <string name="col2">Age</string>
    <string name="col3">Surname</string>
    <string name="row1Name">Ali</string>
    <string name="row1Age">51</string>
    <string name="row1Surname">Mohammad</string>
    <string name="row2Name">Dave</string>
    <string name="row2Age">45</string>
    <string name="row2Surname">Smith</string>
    <string name="row3Name">Jason</string>
    <string name="row3Age">67</string>
    <string name="row3Surname">William</string>


    <string name="IP">192.168.0.7</string>

    <string name="title">BICI UD</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>